IE can't seem to do fixed height columns, so force a minimum height in the dashboard... Alternative is a table-based layout. Also fix some double border issues.

--- a/htdocs/css/dashboard.css
+++ b/htdocs/css/dashboard.css
@@ -59,6 +59,3 @@
 #dashboard-navbar td img {
   vertical-align: bottom;
 }
-
-#dashboard-navbar tbody {
-}
